# src/apis/auth/authRouter.js
@@ -5,5 +5,6 @@ import asyncHandler from "express-async-handler";
 const routes = express.Router();
 
 routes.post("/register", asyncHandler(authControllers.register));
+routes.post("/login", asyncHandler(authControllers.login));
 
 module.exports = routes;
